--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Resume Online - Emmanuel Carcomo</title>
+    <meta name="title" property="og:title" content="Emmanuel Carcomo - Resume">
+    <meta name="title" property="og:description" content="Online Resume made with ReactJS and Firebase">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
